
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct hashset_int {unsigned int size; int* h; int filled; } ;



int hashset_int_insert (struct hashset_int *H, int id) {
  int h1, h2;
  h1 = ((unsigned int) id) % H->size;
  h2 = 1 + ((unsigned int) id) % (H->size - 1);
  while (H->h[h1] != 0) {
    if (H->h[h1] == id) {
      return 0;
    }
    h1 += h2;
    if (h1 >= H->size) { h1 -= H->size; }
  }
  H->h[h1] = id;
  H->filled++;
  return 1;
}
